implement agora video call

--- a/eas.json
+++ b/eas.json
@@ -4,6 +4,11 @@
       "ios": {
         "simulator": true
       }
+    },
+    "preview": {
+      "android": {
+        "buildType": "apk"
+      }
     }
   }
 }
